# CorridorKey

./: .dockerignore  .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CorridorKey_DRAG_CLIPS_HERE_local.bat  CorridorKey_DRAG_CLIPS_HERE_local.sh  CorridorKey_MACOS_Open_Me_In_Terminal.command  Dockerfile  Install_CorridorKey_Windows.bat  Install_CorridorKey_macOS.sh  LICENSE  PR_DESCRIPTION.md  README.md  RunGVMOnly.sh  RunInferenceOnly.sh  clip_manager.py  convert_checkpoint.py  corridorkey_cli.py  device_utils.py  docker-compose.yml  mise.toml  poc_distill.py  poc_scale.py  pyproject.toml  renovate.json  requirements.txt  test_outputs.py  test_vram.py  zensical.toml
.claude/: settings.json
.gemini/: config.yaml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  pull_request_template.md
BiRefNetModule/: wrapper.py
CorridorKeyModule/: README.md  backend.py  inference_engine.py  model_assets.py  tiled_inference.py
VideoMaMaInferenceModule/: AGENTS.md  inference.py  pipeline.py
backend/: clip_state.py  frame_io.py  job_queue.py  service.py
benchmarks/: README.md  RESULTS.md  bench_inference.py  bench_matrix.py  bench_phase.py  visual_compare.py
distillation/: dataset.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  COLOR_PIPELINE.md  CONTRIBUTING.md  CorridorKey Pipeline Optimization Research.md  GETTING_STARTED.md  HANDOFF_MLX_ENGINE_OPTIMIZATION.md  LLM_HANDOVER.md  MLX_OPTIMIZATION_LOG.md  OPTIMIZATION_DEEP_DIVE.md  OPTIMIZATION_SUMMARY.md  PROCESS_OVERVIEW.md  QUICKSTART_ARTISTS.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  index.md  (+7 more)
(+123 files in other folders)
