[project]
name = "corridorkey"
version = "2.0.0"
description = "AI Green Screen Keyer by Corridor Digital"
license = { text = "CC-BY-NC-SA-4.0" }
requires-python = ">=3.13"
readme = "README.md"
authors = [{ name = "Corridor Digital" }]
maintainers = [{ name = "Rajesh Das", email = "rajesh@hyperoot.dev" }]
dependencies = []

[project.optional-dependencies]
cuda = ["corridorkey-core[cuda]"]

[dependency-groups]
dev = [
  "git-cliff>=2.12.0",
  "prek>=0.3.5",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.5",
  "ty>=0.0.21",
]
docs = [
    "mkdocstrings[python]>=1.0.3",
    "zensical>=0.0.26",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
corridorkey-core = { workspace = true }
